# ansible-knowledge-mcp

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
src/ansible_know/: __init__.py  collection_manifest.py  config.py  docs.py  parser.py  server.py  skills.py
src/ansible_know/templates/: playbook.yml.j2
src/ansible_knowledge/: __init__.py  collection_manifest.py  docs.py  server.py  skills.py
src/ansible_knowledge/templates/: SKILL.md.j2  run.sh.j2
tests/: conftest.py  test_collection_manifest.py  test_docs.py  test_parser.py  test_server.py  test_skills.py
