[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ansible-knowledge-mcp"
version = "0.1.0"
description = "Ansible Knowledge MCP Server — module discovery, documentation, and skill generation for AI agents"
requires-python = ">=3.10"
license = "Apache-2.0"
readme = "README.md"
keywords = ["ansible", "mcp", "ai", "agent", "skills", "module-discovery"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "fastmcp>=3.0",
    "httpx>=0.27",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
ansible-knowledge-mcp = "ansible_knowledge.server:main"

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/ansible_knowledge"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
